# ChangeLog for dev-libs/libgcrypt
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.81 2006/12/28 11:32:04 grobian Exp $

  28 Dec 2006; Fabian Groffen <grobian@gentoo.org> libgcrypt-1.2.0.ebuild,
  libgcrypt-1.2.1.ebuild, libgcrypt-1.2.1-r1.ebuild, libgcrypt-1.2.2.ebuild,
  libgcrypt-1.2.2-r1.ebuild, libgcrypt-1.2.3.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*libgcrypt-1.2.3 (29 Oct 2006)

  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libgcrypt-1.2.3.ebuild:
  Version bump

  19 Oct 2006; Roy Marples <uberlord@gentoo.org> libgcrypt-1.2.2-r1.ebuild:
  Added ~sparc-fbsd keyword.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> libgcrypt-1.2.2-r1.ebuild:
  Marked stable on mips.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-libgcrypt-1.1.12, files/digest-libgcrypt-1.1.94,
  files/digest-libgcrypt-1.2.0, files/digest-libgcrypt-1.2.1,
  files/digest-libgcrypt-1.2.1-r1, Manifest:
  Fixing SHA256 digest, pass four

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libgcrypt-1.2.2-r1.ebuild:
  Actually add the ~x86-fbsd keyword.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libgcrypt-1.2.2-r1.ebuild:
  Don't run econf two times, it's useless.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libgcrypt-1.2.2-r1.ebuild:
  Run elibtoolize and add ~x86-fbsd keyword.

  21 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  -files/libgcrypt-1.2.1-GNU-stack-fix.patch,
  -files/libgcrypt-1.2.1-info-entry-fix.patch,
  -files/libgcrypt-1.2.1-ppc64-fix.patch, libgcrypt-1.2.1.ebuild,
  libgcrypt-1.2.1-r1.ebuild, libgcrypt-1.2.2.ebuild,
  libgcrypt-1.2.2-r1.ebuild:
  Move patches to mirrors, fixes large files bug 123634 reported by Mark
  Loeser <halcy0n at gentoo dot org>.

  14 Feb 2006; Fabian Groffen <grobian@gentoo.org>
  libgcrypt-1.2.2-r1.ebuild:
  Marked ppc-macos stable bug (#122760)
