@@ -1,0 +1,9 @@
+MD5 5cf59068f593221bf94dc962630bd84d libgcrypt-1.2.1-patches.tar.gz 2631
+RMD160 314b601285d48bd57b89dca1e20779256c7ed3e4 libgcrypt-1.2.1-patches.tar.gz 2631
+SHA256 f1900ed55883dc8619fd4e5eabe16cb463873884683bbeb9c9a6d9dc53a18ed6 libgcrypt-1.2.1-patches.tar.gz 2631
+MD5 06635a645f187ed233f28b5bc4c5a442 libgcrypt-1.2.3-idea.diff.bz2 2917
+RMD160 33ebc7c13cecb58e6260f08fe227e88bd9d65eb7 libgcrypt-1.2.3-idea.diff.bz2 2917
+SHA256 7010751217c4c42e0fd58ea6bb386b28a979287108068b17ca383d41eb70d498 libgcrypt-1.2.3-idea.diff.bz2 2917
+MD5 64304da2d9e21239246c66f1d449b2c6 libgcrypt-1.2.3.tar.gz 985735
+RMD160 6e6290ec4bb89e19ac312e76d0f0a12856bfe3bc libgcrypt-1.2.3.tar.gz 985735
+SHA256 2b384172b54074aef4ec23b3fcc8292c86c7c4fb0efb943e7dea9d886a1d4846 libgcrypt-1.2.3.tar.gz 985735
