@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/libgcrypt
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.81 2006/12/28 11:32:04 grobian Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.82 2007/01/04 19:36:43 alonbl Exp $
+
+*libgcrypt-1.2.3-r1 (04 Jan 2007)
+
+  04 Jan 2007; Alon Bar-Lev <alonbl@gentoo.org> +libgcrypt-1.2.3-r1.ebuild:
+  Add idea algirithm patch, modified version of
+  http://www.kfwebs.net/articles/article/42/GnuPG-2.0---IDEA-support,
+  bug#159870
 
   28 Dec 2006; Fabian Groffen <grobian@gentoo.org> libgcrypt-1.2.0.ebuild,
   libgcrypt-1.2.1.ebuild, libgcrypt-1.2.1-r1.ebuild, libgcrypt-1.2.2.ebuild,
